<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="11"
    tools:context=".MainActivity">

    <!--    upper half-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical"
        android:weightSum="6">

        <TextView
            android:id="@+id/lbl_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#66BB6A"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/lblInfo"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/htnName"
            android:inputType="textPersonName"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/edt_amount"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/htnAmount"
            android:inputType="number"
            android:textSize="24dp" />

        <CheckBox
            android:id="@+id/ck_vip"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/lblVIP"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/lbl_bill"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/lblBill"
                android:textColor="#9F9696"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/lbl_billNumber"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#FFF3E0"
                android:gravity="center"
                android:textColor="#E57373"
                android:textSize="24dp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:backgroundTint="#A69191"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/btnCal"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:backgroundTint="#A69191"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/btnNext"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/btn_stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:backgroundTint="#A69191"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/btnStat"
                app:cornerRadius="0dp" />
        </LinearLayout>
    </LinearLayout>

    <!--    lower half-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:weightSum="6">

        <TextView
            android:id="@+id/lbl_stat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#66BB6A"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/lblStat"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <!--            thong tin thong ke-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/lbl_customers"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/lblCustomers"
                android:textColor="#9F9696"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/lbl_sl_customers"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#FFF3E0"
                android:gravity="center"
                android:textColor="#E57373"
                android:textSize="24dp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <!-- tong so vip-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/lbl_no_vip"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/lblNoVIPs"
                android:textColor="#9F9696"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/lbl_sl_vip"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#FFF3E0"
                android:gravity="center"
                android:textColor="#E57373"
                android:textSize="24dp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <!-- tong so doanh thu-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/lbl_total_sale"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/lblSales"
                android:textColor="#9F9696"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/lbl_sl_sale"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#FFF3E0"
                android:gravity="center"
                android:textColor="#E57373"
                android:textSize="24dp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/lbl_ribbon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.5"
            android:background="#1976D2"
            android:textColor="@color/white"
            android:textSize="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:weightSum="5">

            <ImageButton
                android:id="@+id/btn_exit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/btnExit"
                android:gravity="center_vertical"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:cornerRadius="0dp"
                app:srcCompat="@android:drawable/ic_lock_power_off" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>